[package]
name = "server"
version = "0.1.0"
authors = ["Lukas Nagel <lukaswnagel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "^0.7"